[package]
edition = "2024"
name = "port-expander-example"
version = "0.1.0"
authors = ["Athamantis <helle@grasmo.no>"]
resolver = "2"

[[bin]]
name = "port-expander-example"
test = false
bench = false

[dependencies]
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3.1"
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core", "inline-asm"] }
embassy-nrf = { version = "0.9", features = ["defmt", "nrf9151-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-net-nrf91 = { version = "0.1", features = ["defmt"]}
# embassy-net = { version = "0.7", features = ["defmt", "tcp", "proto-ipv4", "medium-ip", "dns"] }
# port-expander = "0.6.5"

port-expander = { path = "/home/athamantis/git/port-expander/" }
embassy-embedded-hal = "0.5.0"
static_cell = "2.1.1"


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
